# Core_Rank04_RAG_against_the_machine

./: .gitignore  Docker-compose.yml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
data/: raw_chunks.json
data/answers/: sources.json  sources_with_answer.json
data/chunks/: minimal_source.json
data/output/: sources.json  sources_code.json  sources_docs.json
data/processed/: corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/processed/ad16f2da-0a62-48b1-8ea6-1f497f923527/: index_metadata.pickle
data/temp/: chroma.sqlite3  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/temp/8553f845-6c34-4bf8-b555-e00d9e40d0bb/: index_metadata.pickle
datasets_public/public/AnsweredQuestions/: dataset_code_public_test.json  dataset_docs_public_test.json
moulinette/: README.md  pyproject.toml
moulinette/tests/: __init__.py  conftest.py  test_list_valid_questions.py
src/: __main__.py  base_patterns.py
src/answer_generation/: answer.py  pre_prompt.py
src/api/: main.py
src/data_indexing/: chunk_data.py  helper_classes.py  indexer.py
src/data_retrieval/: BM25indexer.py  BM25retriever.py  abstract_classes.py  chunk_data.py  helper_classes.py  hybrid_retriever.py  lexical_retriever.py  resource_refiner.py  semantic_retriever.py
src/frontend/: app.py
src/model_loading/: llm_loader.py
src/parsing/: parse_rag_dataset.py
src/validaror/: resourec_validator.py
src/validator/: resource_validator.py
student/: __main__.py
student/answer_generation/: answer.py  pre_prompt.py
student/data_retrieval/: BM25retriever.py  abstract_classes.py  chunk_data.py  resource_refiner.py
student/parsing/: parse_rag_dataset.py
student/validator/: resource_validator.py
tests/: test_api.py
(+5 files in other folders)
