[project]
name = "rag-against-machines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "bm25s>=0.3.2.post1",
    "langchain-text-splitters>=1.1.1",
    "pydantic>=2.12.5",
    "fire>=0.7.1",
    "tqdm>=4.67.3",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "streamlit>=1.56.0",
    "chromadb>=1.5.8",
    "sentence-transformers>=5.4.1",
    "einops>=0.8.2",
    "transformers==5.0.0",
    "torch==2.5.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
